--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="//code.jquery.com/qunit/qunit-1.17.1.js"></script>
-  <script src="/js/collector.js"></script>
+  <script src="./js/collector.js"></script>
   <script type="text/javascript">
   	QUnit.test("Значение count() должно увеличиваться, когда происходит регистрация трат", function( assert ) {
   		var collector = new Collector(new MemStorage());
