--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" manifest="/cache.manifest">
+<html lang="en" manifest="./cache.manifest">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon" href="/icon.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/icon.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/icon.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/icon.png">
+    <link rel="apple-touch-icon" href="./icon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./icon.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./icon.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./icon.png">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Коллектор</title>
 
     <!-- Bootstrap -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <style type="text/css">
       #amount-input-group INPUT {
@@ -132,9 +132,9 @@
       </div>
     </div>
 
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/collector.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/collector.js"></script>
 
     <script type="text/javascript">
     var WithdrawalUIController = function(collector, $container, $clearButton) {
